// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardOeeDonutWidget > renders correctly when shiftProductionType is 0 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <small-placeholder-text-stub
    primarytext="No data available"
    secondarytext="Please check back later or edit settings"
  />
  
</div>
`;

exports[`DashboardOeeDonutWidget > renders correctly when shiftProductionType is missing 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <small-placeholder-text-stub
    primarytext="No data available"
    secondarytext="Please check back later or edit settings"
  />
  
</div>
`;

exports[`DashboardOeeDonutWidget > renders correctly, when OEE data doesnt have current delayTime, but has productionTime 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <o-e-e-widget-compact-template-stub
    labelsdata="[object Object],[object Object],[object Object]"
  />
  
</div>
`;

exports[`DashboardOeeDonutWidget > renders correctly, when OEE data has current and previous delayTime and productionTime 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <o-e-e-widget-compact-template-stub
    labelsdata="[object Object],[object Object],[object Object]"
  />
  
</div>
`;

exports[`DashboardOeeDonutWidget > renders correctly, when OEE data has current delayTime, but doesnt have productionTime 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <o-e-e-widget-compact-template-stub
    labelsdata="[object Object],[object Object],[object Object]"
  />
  
</div>
`;
